fix: remove z-index.

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@
 .navigation {
   font-family: var(--fontfamily-sans);
   font-size: 1rem;
-  z-index: 10000000;
 }
 
 /* stylelint-disable selector-no-type */
